cabal-version: 3.0
name: lovegen
version: 0.1.0.0
synopsis: The website of Lovers' Guild
description:
    Generate love, not war!

    This Haskell executable generates the website of Lovers' Guild.
homepage: https://github.com/LoversGuild/website
license: AGPL-3.0-only
license-file: LICENSE
author: Lovers' Guild
maintainer: dev@loversguild.org
extra-source-files:
    README.md
    .hlint.yaml

source-repository head
    type: git
    location: https://github.com/LoversGuild/website.git
                      
flag Werror
    description: Enable -Werror for fixing all warnings
    default: False
    manual: True

flag Weverything
    description: Enable almost every possible warning
    default: False
    manual: True

executable lovegen
    build-depends:
        base ^>={ 4.17, 4.18 },
        binary ^>={ 0.8, 0.9, 0.10 },
        bytestring ^>=0.11.3,
        containers ^>=0.6.6,
        directory ^>=1.3.8,
        doclayout ^>=0.4,
        doctemplates ^>=0.11,
        file-io ^>=0.1,
        filepath ^>=1.4.100,
        hashable ^>=1.4.2,
        pandoc ^>=3.1.2,
        shake ^>=0.19.6,
        text ^>=2.0,
        time ^>={ 1.12, 1.13 },
        typed-process ^>=0.2.10,
        unordered-containers ^>=0.2.19.1

    default-extensions:
        BlockArguments,
        DataKinds,
        DeriveAnyClass,
        DerivingStrategies,
        DuplicateRecordFields,
        LambdaCase,
        NoFieldSelectors,
        NoStarIsType,
        OverloadedRecordDot,
        OverloadedStrings,
        QuasiQuotes,
        StrictData,
        TypeFamilies

    default-language: GHC2021
    ghc-options:
        -fshow-warning-groups

    if flag(Werror)
        ghc-options:
            -Werror

    if flag(Weverything)
        ghc-options:
            -Weverything
            -Wno-all-missed-specialisations
            -Wno-implicit-prelude
            -Wno-missed-specialisations
            -Wno-missing-import-lists
            -Wno-missing-kind-signatures
            -Wno-missing-safe-haskell-mode
            -Wno-monomorphism-restriction
            -Wno-safe
            -Wno-unsafe
            -Wno-unticked-promoted-constructors
    else
        ghc-options: -Wall -Wcompat
    hs-source-dirs: src
    main-is: Main.hs
    other-modules:
        LoveGen.Orphans
        LoveGen.Utils
