cabal-version: 3.0
name: lovegen
version: 0.1.0.0
synopsis: A simple static website generator for Haskell by Lover's Guild
description:
    Generate love, not war!

    This is a Haskell tool for statically generating websites.
    Its defining feature is support for hierarchical menus.
    See README.md in source repository for documentation.
homepage: https://github.com/LoversGuild/lovegen
license: AGPL-3.0-only
license-file: LICENSE
author: Lovers' Guild
maintainer: dev@loversguild.org
extra-source-files:
    README.md
    .hlint.yaml

source-repository head
    type: git
    location: https://github.com/LoversGuild/lovegen
                      
flag Werror
    description: Enable -Werror for fixing all warnings
    default: False
    manual: True

flag Weverything
    description: Enable almost every possible warning
    default: False
    manual: True

library
    build-depends:
        base ^>={ 4.17, 4.18, 4.19 },
        bytestring ^>= { 0.11.3, 0.12 },
        containers ^>={ 0.6.6, 0.7 },
        directory ^>=1.3.8,
        doclayout ^>=0.4,
        file-io ^>=0.1,
        filepath ^>={ 1.4.100, 1.5 },
        hashable ^>=1.4.2,
        optparse-applicative ^>=0.18,
        pandoc ^>=3.1.2,
        text ^>={ 2.0, 2.1 },
        time ^>={ 1.12, 1.13 },
        typed-process ^>=0.2.10,
        unordered-containers ^>=0.2.19.1

    default-extensions:
        ApplicativeDo,
        BlockArguments,
        DataKinds,
        DeriveAnyClass,
        DerivingStrategies,
        DuplicateRecordFields,
        LambdaCase,
        NoFieldSelectors,
        NoStarIsType,
        OverloadedRecordDot,
        OverloadedStrings,
        QuasiQuotes,
        RecordWildCards,
        StrictData,
        TypeFamilies

    default-language: GHC2021
    ghc-options:
        -fshow-warning-groups

    if flag(Werror)
        ghc-options:
            -Werror

    if flag(Weverything)
        ghc-options:
            -Weverything
            -Wno-all-missed-specialisations
            -Wno-implicit-prelude
            -Wno-missed-specialisations
            -Wno-missing-import-lists
            -Wno-missing-kind-signatures
            -Wno-missing-role-annotations
            -Wno-missing-safe-haskell-mode
            -Wno-monomorphism-restriction
            -Wno-safe
            -Wno-unsafe
            -Wno-unticked-promoted-constructors
    else
        ghc-options: -Wall -Wcompat
    hs-source-dirs: src
    exposed-modules:
        LoveGen
    other-modules:
        LoveGen.CommandLine
        LoveGen.Files
        LoveGen.Git
        LoveGen.Pandoc
